assets/css/main.scss
@import "intvstyle.scss";

body {
    height: 100vh;
}

#logo {
    position: absolute;
    top: 45%;
    left: 50%;
    width: 9vw;
    visibility: hidden;
    @include mobile {
        width: 12vw;
    }
    z-index: 20;
}

#logotext {
    position: absolute;
    top: 45%;
    left: 50%;
    font-size: 9vw;
    font-weight: 300;
    -webkit-clip-path: inset(0px 0px 0px 100%);
    clip-path: inset(0px 0px 0px 100%);
    visibility: hidden;
    @include mobile {
        font-size: 12vw;
    }
    z-index: 20;
}

.parallaxbg {
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    overflow: hidden;
}

#backgroundbit {
    background-image: url(../img/intvultrablur3.jpg);
    height: 100vh;
    visibility: hidden;
}

#underbackgroundbit {
    position: relative;
    z-index: 10;
}

.displaysection {
    height: 35rem;
    padding-top: 5em;
    padding-bottom: 5rem;
}

.shadow {
    box-shadow: 0em 0.5em 1em #000;
}

.qviewsection {
    background-image: linear-gradient(rgba(21,21,21,0.7), rgba(21,21,21,0.7)), url("../../qview/assets/img/thumbnail.jpg");
    z-index: 9;
}

.contactsection {
    z-index: 8;
    height: 12rem;
    margin: auto;
}

.qviewtext {
    font-family: Lato;
}

.qviewtitle {
    font-weight: 300;
    font-size: 6rem;
    display: inline-block;
    vertical-align: middle;
}

#synchrotitle {
    font-family: 'Coda' !important;
    font-weight: 300;
    font-size: 4rem;
}

.perspective {
    perspective: 30em;
}

